--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,10 @@
 {% block body %}
     <main class="hero-section">
         <h1>Be your own doctor...</h1>
-        <p>
-            It might have happened so many times that you or someone yours need doctor’s help
-            immediately, but they are not available due to some reasons. The Disease Prediction system
-            is an end user support and online consultation project. Here, we propose a web application
-            that allows users to get instant guidance on their disease through an intelligent system.
-            The application is fed with various details and the disease associated with those details.
-            The application allows users to share their disease-related issues. It then processes user-specific
-            details to check for various illnesses that could be associated with it. Here we use some intelligent
-            data mining techniques to guess the most accurate illness that could be associated with patient’s
-            details. Based on result, patient can contact doctor accordingly for further treatment.
+        <br>
+        <p >
+            Your Health Matters — We’re Here When You Need Us Most. Life is unpredictable. Sometimes, when you or your loved ones urgently need a doctor’s help, immediate assistance may not be available.That’s why we created the Docify Smart Disease Prediction System — your trusted companion for health support anytime, anywhere. Our intelligent web platform allows you to get instant, personalized guidance based on your symptoms. Using advanced machine learning and data mining techniques, we help predict potential illnesses accurately and guide you on the next steps for your care.
+After receiving your health prediction, you can also consult a qualified doctor directly through our platform for professional advice and further treatment. With Docify, you don’t have to wait helplessly. You are empowered to act quickly, confidently, and wisely for your health. Because when it comes to your well-being, every second counts, and we truly care about you.
         </p>
         <button id="getStartedBtn" class="btn">Get started</button>
     </main>
